Switched a use of one of the constructors of Double to Double.valueOf().